# whisper

./: .gitignore  pyproject.toml  requirements.txt  run
whisper/: __init__.py  transcribe.py
