[project]
name = "whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0.dev20240905",
    "pytorch-triton-rocm>=3.0.0",
    "numba>=0.60.0",
    "numpy>=1.26.4",
    "tqdm>=4.66.2",
    "more-itertools>=10.5.0",
    "tiktoken>=0.6.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/nightly/rocm6.2"]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/nightly/rocm6.2"]

[project.scripts]
whisper = "whisper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3
